# FRMIS_Pro

./: CMakeLists.txt  README.md
docs/superpowers/specs/: 2026-05-27-FRMIS-UI-design.md
include/: CanvasView.h  GlobalOptimizer.h  ImageBlender.h  ImagePreprocessor.h  MainWindow.h  OptimizationEngine.h  ParameterDialog.h  RegistrationEngine.h  frmis_api.h
src/: CanvasView.cpp  GlobalOptimizer.cpp  ImageBlender.cpp  ImagePreprocessor.cpp  MainWindow.cpp  OptimizationEngine.cpp  ParameterDialog.cpp  RegistrationEngine.cpp  frmis_api.cpp  main.cpp
